apps/monitoring/grafana-service.yaml
# Grafana Service Override
# This service will be used to expose Grafana through Gateway API
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: monitoring
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
spec:
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
